fix (index): fix style gap

--- a/frontend/pages/index/style.scss
+++ b/frontend/pages/index/style.scss
@@ -246,6 +246,7 @@
       display: grid;
       grid-template-rows: repeat(5, min-content);
       grid-auto-flow: column;
+      gap: 0 30px;
 
       li:nth-child(6) {
         margin-top: 0;
